- Starting on a Jasper cleanup. - Make some classes extensible. - Add some options (like a compiler class name parameter). - Clean up exception processing. - Remove fields which are not used. - Externalize missing strings.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@441109 13f79535-47bb-0310-9956-ffa450edef68